# bazel-sandbox

./: .gitignore  .gitmodules  BUILD.bazel  WORKSPACE.bazel
custom-rules-providers/: BUILD.bazel  WORKSPACE.bazel  alpha_beta_test_deps.dot  providers.bzl  rules.bzl
custom-rules-providers/extra/: BUILD.bazel
js/: BUILD.bazel  WORKSPACE.bazel  package-lock.json  package.json
resources/: BUILD.bazel
src/pkg/: Main.java
