load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# # EITHER: aspect_bazel_lib compatible with latest aspect_rules_swc
# http_archive(
#     name = "aspect_bazel_lib",
#     sha256 = "2f6f04a002a9f988ae79107a91a8498892fb03bee978a8bf841eb1bd9fded2ea",
#     strip_prefix = "bazel-lib-0.9.8",
#     url = "https://github.com/aspect-build/bazel-lib/archive/refs/tags/v0.9.8.tar.gz",
# )

# # OR: Local copy of aspect_bazel_lib
# local_repository(
#     name = "aspect_bazel_lib",
#     path = "bazel-lib",
# )

# # Load aspect_bazel_lib
# load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")

# aspect_bazel_lib_dependencies()

# EITHER: Latest release of aspect_rules_swc
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "aspect_rules_swc",
    sha256 = "422126a732de2a858eb29ee24df6da29964bdd93c8b141e2f83a5119adf36686",
    strip_prefix = "rules_swc-0.5.1",
    url = "https://github.com/aspect-build/rules_swc/archive/refs/tags/v0.5.1.tar.gz",
)

# OR: Local copy of aspect_rules_swc
# local_repository(
#     name = "aspect_rules_swc",
#     path = "rules_swc",
# )

# Fetches the rules_swc dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@aspect_rules_swc//swc:dependencies.bzl", "rules_swc_dependencies")
rules_swc_dependencies()

# Fetches a pre-built Rust-node binding from
# https://github.com/swc-project/swc/releases.
# If you'd rather compile it from source, you can use rules_rust, fetch the project,
# then register the toolchain yourself. (Note, this is not yet documented)
load("@aspect_rules_swc//swc:repositories.bzl", "swc_register_toolchains")
swc_register_toolchains(
    name = "swc",
    swc_version = "v1.2.168",
)

# Fetches a NodeJS interpreter, needed to run the swc CLI.
# You can skip this if you already register a nodejs toolchain.
load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains")
nodejs_register_toolchains(
    name = "node16",
    node_version = "16.9.0",
)
load("@aspect_bazel_lib//lib:repositories.bzl", "DEFAULT_YQ_VERSION", "register_yq_toolchains")

register_yq_toolchains(
    version = DEFAULT_YQ_VERSION,
)